# pyskeleton

./: .travis.yml  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
