# Additional arguments to setuptools.setup()
# (Note - requires version 30.3)
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]

# Copy long_description from README file
long_description = file: README.md


# More setuptools options
[options]

# Dependencies
python_requires = ~=3.5
install_requires =
setup_requires =
	pytest-runner
tests_require =
	pytest

include_package_data = True


# Package data to include
[options.package_data]


# List any entry points here
[options.entry_points]


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests {{ cookiecutter.package_name }}

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
