[metadata]
name = {{ cookiecutter.project_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{ cookiecutter.project_short_description }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
url = {{ cookiecutter.project_url }}


[options]
include_package_data = true

python_requires = >=3.5

install_requires =
	# Dependencies go here

setup_requires =
	pytest-runner

test_require =
	pytest


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests {{ cookiecutter.package_name }}

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
